--- a/index.html
+++ b/index.html
@@ -447,6 +447,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <!-- Ďalšie meta značky a odkazy pre svedectvá klientov -->
     <script type="application/ld+json">
     {
+        
         "@context": "https://schema.org",
         "@type": "Product",
         "name": "Konzultácia vedenia emailom",
@@ -462,7 +463,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             "price": "6",
             "availability": "https://schema.org/InStock",
             "priceValidUntil": "2095-12-31",
-            "url": "https://clairvoyancemedium.github.io",
+            "url": "https://clairvoyancemedium.github.io/spol-ahlive-a-rychle-vestenie-emailom.github.io/",
             "shippingDetails": {
                 "@type": "OfferShippingDetails",
                 "shippingRate": {
@@ -508,7 +509,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     "name": "Zuzana"
                 },
                 "datePublished": "2024-12-25",
-                "reviewBody": "Na začiatku som bola skeptická, ale Frederick ma presvedčil už v prvom e-maile. Jeho presná a podrobná analýza môjho láskyplného a profesionálneho života ma ohromila. Za menej ako 5 hodín som mala jasné odpovede a užitočné rady, ako postupovať. Rýchle, spoľahlivé a 100% personalizované vedenie emailom. Odporúčam každému, kto hľadá kvalitné duchovné vedenie!",
+                "reviewBody": "Na začiatku som bola skeptická, ale Frederick ma presvedčil už v prvom e-maile. Jeho presná a podrobná analýza môjho láskyplného a profesionálneho života ma ohromila.",
                 "reviewRating": {
                     "@type": "Rating",
                     "ratingValue": "5"
@@ -521,7 +522,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     "name": "Ján"
                 },
                 "datePublished": "2024-12-20",
-                "reviewBody": "Frederick premenil moje pochybnosti na istotu vďaka výnimočnej konzultácii vedenia emailom. Jeho predpovede o mojej rodine a kariére boli presné a plné múdrosti. S jeho skúsenosťami vie upokojiť a viesť s úžasnou jasnosťou. Lacná online konzultácia, kvalitná, rýchla a hlavne veľmi efektívna. Ďakujem veľmi pekne Frederick!",
+                "reviewBody": "Frederick premenil moje pochybnosti na istotu vďaka výnimočnej konzultácii vedenia emailom. Jeho predpovede o mojej rodine a kariére boli presné a plné múdrosti.",
                 "reviewRating": {
                     "@type": "Rating",
                     "ratingValue": "5"
