--- a/index.html
+++ b/index.html
@@ -785,7 +785,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <a href="mailto:contact.clairvoyancemedium@gmail.com" target="_blank" rel="noopener noreferrer">KONTAKT</a>
         <br>
         <br>
-        <a href="https://www.clairvoyancemedium.com/Conditions-Generales-des-Ventes-et-d-Utilisation-ccsaaaaaa.asp" target="_blank" rel="noopener noreferrer">© 2025 ClairVoyanceMedium.com - Všetky práva vyhradené</a>
+        <a href="https://www.clairvoyancemedium.com/Conditions-Generales-des-Ventes-et-d-Utilisation-ccsaaaaaa.asp" target="_blank" rel="noopener noreferrer">
+  © <span id="current-year"></span> ClairVoyanceMedium.com - Všetky práva vyhradené
+</a>
+
+<script>
+  // Získanie aktuálneho roku
+  const currentYear = new Date().getFullYear();
+  // Vloženie roku do elementu s ID "current-year"
+  document.getElementById("current-year").textContent = currentYear;
+</script>
         <br>
         <br>
     </footer>
